fixed whitespace under avatar

--- a/styling/scss/components/avatar.scss
+++ b/styling/scss/components/avatar.scss
@@ -2,6 +2,8 @@
   display: inline-block;
   vertical-align: middle;
   margin: 15px;
+  line-height: 0;
+  font-size: 0;
 
   img {
     @include avatar(5px, 100px);
